# file_web_server

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  release.yml
cert/: gen_cert.sh
docs/superpowers/plans/: 2026-07-20-github-release-workflow.md
docs/superpowers/specs/: .2026-07-19-directory-listing-design.md.swp  2026-07-19-directory-listing-design.md  2026-07-20-github-release-workflow-design.md
src/: main.cpp
src/core/: connection.cpp  connection.h  connection_pool.h  debug_log.h  event_loop.cpp  event_loop.h  tls_context.h  version.h
src/http/: http_request.cpp  http_request.h  http_response.cpp  http_response.h  mime_types.h
src/server/: cli.h  file_server.cpp  file_server.h
tests/: smoke_test.sh  stress_test.py
